builder/css/custom.css
/* ... */
.main-footer{
  display: flex;
  justify-content: flex-end;
  padding: 10px 0;
  border-top: 1px solid #e5e5e5;
}
.main-footer .btn{
  margin-right: 15px;
}

/* =====  METHOD  ===== */
ul.list-unstyled > li{
  margin-bottom: 10px;
}
.method {
  border: 1px solid #e5e5e5;
  border-radius: 4px;
  display: flex;
}
.active .method {
  border-top-color: #a7d0f1;
  border-left-color: #a7d0f1;
  border-right-color: #a7d0f1;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
.col-methods .method > div{
  padding-top : 10px;
  padding-bottom : 10px;
}
#methods .method .method-info{
  padding: 8px;
  position: relative;
}
#methods .method .method-info .btn-holder {
  position: absolute;
  right: 6px;
  top: 6px;
  z-index: 10;
}
#methods .method .method-info .btn-holder .method-action {
  background-color: transparent;
  border: none;
  cursor: pointer;;
  transition-property: opacity;
  transition-duration: .2s;
  opacity: 0;
}
#methods .method:hover .method-info .btn-holder .method-action {
  opacity: .6;
}
#methods .method .method-info .btn-holder .method-action:hover {
  opacity: 1;
}
#methods .method .method-info .btn-holder + .row > div:first-child{
  padding-right: 70px;
}
.method .cursorMove {
  background-color: #ededed;
  padding: 0 10px;
  color: #222d4299;
  display: flex;
  align-items: center;
  cursor: grab;
}
.method .method-condition,
.method .method-name,
.method .method-param,
.method .method-errors{
  position: relative;
  padding: 0;
}
.method .method-condition ~ div:before,
.method .method-condition > label:before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 5px;
  width: 3px;
  background-color: #337ab7;
}
.method .method-condition > label:before{
  top: 25px;
}
.method .method-condition ~ div{
  padding-left: 15px;
}
.method .method-name {
  font-size: 16px;
  color: #222D42;
}
.col-methods .method .method-name {
  cursor: pointer;
  padding: 8px;
  display: flex;
  align-self: center;
}
.method .method-name i{
  color: #337ab7;
}
.method .tooltip-icon{
  opacity: 0;
  transition-duration: .2s;
}
.method:hover .tooltip-icon{
  opacity: 1;
}
.method-param > label{
  display: inline-block;
  color: #777;
}
.method-condition > label{
  display: inline-block;
  color: #337ab7;
}
.method-param > .form-control,
.method-condition > .form-control{
  display: inline-block;
  border: none !important;
  background-color: transparent !important;
  box-shadow: none !important;
  outline: none !important;
  width: auto !important;
  padding: 0;
}
.method .show-doc,
.method .edit-method{
  position: relative;
  display: flex;
  align-items: center;
  color: #337ab7;
  border-left: 1px solid #e5e5e5;
  cursor: pointer;
}
.method-details .btn.show-doc{
  position: relative;
  box-shadow: none !important;
}
.method .show-doc:before,
.method .edit-method:before{
  content: "";
  position: absolute;
  width: 10px;
  height: 10px;
  transform: rotate(45deg);
  bottom: 0px;
  opacity: 0;
  left: calc(50% - 5px);
  background-color: #337ab7;
  z-index: 999;
}
.method-details .btn.show-doc:before{
  content: "";
  position: absolute;
  width: 10px;
  height: 10px;
  transform: rotate(45deg);
  opacity: 0;
  right: 0;
  top: calc(50% - 5px);
  background-color: #337ab7;
  z-index: 999;
  transition-duration: .2s;
  transition-property: background-color;
}
.method-details .btn.show-doc:hover:before{
  background-color: #0069d9;
}
.method.doc-opened .show-doc,
.active .method .edit-method{
  background-color: #337ab7;
  color: #fff !important;
}
.method.doc-opened .show-doc:before,
.active .method .edit-method:before{
  opacity: 1;
  bottom: -5px;
}
.method-details .btn.show-doc.doc-opened:before{
  opacity: 1;
  right: -5px;
}
.method .edit-method{
  padding: 0 15px;
}
.method .show-doc > i,
.method .edit-method > i{
  opacity: .6;
}
.method.doc-opened .show-doc > i,
.method .show-doc:hover > i,
.active .method .edit-method > i,
.method .edit-method:hover > i{
  opacity: 1;
}

.method.doc-opened{
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border: 1px solid #a7d0f1;
  border-bottom: 1px solid #e5e5e5;
}
.method + .markdown{
  font-size: .9em;
  padding: 10px;
  border: 1px solid #a7d0f1;
  border-top: none;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  background-color: #f3f8ff;
}
.method + .markdown > p:last-child{
  margin-bottom: 0;
}
.method-details-footer {
  margin-bottom: 15px;
  padding-top: 10px;
  display: flex;
  align-items: center;
  justify-content: flex-end;
}
.method-details-footer > .btn{
  margin-left: 10px;
}
#methods .method-name{
  margin-bottom: 2px;
}
.method-content{
  height: 28px;
  display: flex;
}
.warns{
  margin-top: 2px;
}
.warn-param{
  background-color: #b9c2cc;
  color: #fff;
  padding: 2px 8px 2px 3px;
  border-radius: 20px;
  display: inline-block;
  font-size: .9em;
  display: none;
  cursor: pointer;
  align-items: center;
}
.missingParameters .warn-param.warning {
  display: inline-flex;
  background-color: #F08004;
}
.errorParameters .warn-param.error{
  display: inline-flex;
  background-color: #dd4b39;
}
.warn-param b {
  background-color: #00000055;
  padding: 2px 6px;
  border-radius: 20px;
  margin-right: 2px;
}
/* RESULT CONDITIONS */
.result-class .result-success .input-group-text,
.result-class .result-repaired .input-group-text,
.result-class .result-error .input-group-text{
  border-left-width: 4px;
  border-left-style: solid;
}
.result-class .result-success .input-group-text{
  border-left-color: #8fb92a;
}
.result-class .result-repaired .input-group-text{
  border-left-color: #ffd715;
}
.result-class .result-error .input-group-text{
  border-left-color: #C80004;
}
.result-class .clipboard{
  background-color: #e9ecef;
}
.result-class .clipboard:hover{
  background-color: #6c757d;
}
/* ... */

